# InverseStochastic

./: .gitignore  README.md  pyproject.toml
data/: RD_parameters.json
experiments/: BL_experiment.py  RD_experiment.py  SH_experiment.py  utils_experiment.py
src/models/Blastocyst/: Mammalian_Embryo_Development.xml  blastocyst.py  blastocyst_dm.py
src/models/RD/: RDBatch4Params.py
src/models/Schelling/: schelling.py
src/scrips_analysis/: animal_print.py  loss_matrixes.py  training_curves_histograms.py
src/trainers/: cmaes.py  domain_losses.py  fwd.py  trainer.py
src/utils/: utils.py
src/vision_models/: clip_run.py
src/visualisations/: visual_tools.py
temp_blastocyst/: model_graph.dot
